--- a/src/render/CMakeLists.txt
+++ b/src/render/CMakeLists.txt
@@ -1,1 +1,5 @@
-add_library(renderer renderer.cpp renderer.h)
+add_library(orbit_camera "orbit_camera.cpp" "orbit_camera.h")
+
+add_library(orbit_light "orbit_light.cpp" "orbit_light.h")
+
+add_library(renderer "renderer.cpp" "renderer.h")
