Add simple render loop

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,7 @@ target_include_directories(bounding_box PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 target_link_libraries(bounding_box PUBLIC glm)
 target_include_directories(grid INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
 target_link_libraries(grid INTERFACE glm)
+target_include_directories(helper INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
 
 add_subdirectory("glutils")
 target_include_directories(shader_program PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
@@ -16,6 +17,7 @@ target_link_libraries(
     fluid_system PUBLIC
     glm
     glad
+    helper
     parameters
     bounding_box
     shader_program
@@ -29,6 +31,9 @@ target_link_libraries(
     renderer PUBLIC
     glad
     glfw
+    glm
     parameters
     grid
+    orbit_camera
+    orbit_light
     )
