--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,4 @@
 add_subdirectory("misc")
-target_include_directories(parameters INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
-target_link_libraries(parameters INTERFACE glm)
 target_include_directories(bounding_box PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 target_link_libraries(bounding_box PUBLIC glm)
 target_include_directories(grid INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
@@ -10,6 +8,8 @@ target_include_directories(helper INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
 add_subdirectory("glutils")
 target_include_directories(shader_program PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 target_link_libraries(shader_program PUBLIC glad)
+target_include_directories(ssbo PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+target_link_libraries(ssbo PUBLIC glad)
 
 add_subdirectory("simulation")
 target_include_directories(fluid_system PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
@@ -18,9 +18,9 @@ target_link_libraries(
     glm
     glad
     helper
-    parameters
     bounding_box
     shader_program
+    ssbo
     )
 
 add_subdirectory("render")
@@ -32,8 +32,8 @@ target_link_libraries(
     glad
     glfw
     glm
-    parameters
     grid
     orbit_camera
     orbit_light
+    fluid_system
     )
