--- a/src/glutils/CMakeLists.txt
+++ b/src/glutils/CMakeLists.txt
@@ -1,3 +1,5 @@
 add_library(shader_program "shader_program.cpp" "shader_program.h")
 
 add_library(ssbo "ssbo.cpp" "ssbo.h")
+
+add_library(vao "vao.cpp" "vao.h")
