Render particles as points

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,7 +7,7 @@ target_include_directories(helper INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
 
 add_subdirectory("glutils")
 target_include_directories(shader_program PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
-target_link_libraries(shader_program PUBLIC glad)
+target_link_libraries(shader_program PUBLIC glad glm)
 target_include_directories(ssbo PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 target_link_libraries(ssbo PUBLIC glad)
 target_include_directories(vao PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
