Complete most part of fluid simulation

--- a/shaders/CMakeLists.txt
+++ b/shaders/CMakeLists.txt
@@ -3,7 +3,9 @@ configure_file("particle.frag" "particle.frag" COPYONLY)
 
 configure_file("gravity.comp" "gravity.comp" COPYONLY)
 configure_file("particles_cells.comp" "particles_cells.comp" COPYONLY)
-configure_file("prefix_sum_cells.comp" "prefix_sum_cells.comp" COPYONLY)
+configure_file("prefix_sum_cells_local.comp" "prefix_sum_cells_local.comp" COPYONLY)
+configure_file("prefix_sum_cells_global.comp" "prefix_sum_cells_global.comp" COPYONLY)
 configure_file("sort_particles.comp" "sort_particles.comp" COPYONLY)
-configure_file("position_solver.comp" "position_solver.comp" COPYONLY)
+configure_file("compute_lambda.comp" "compute_lambda.comp" COPYONLY)
+configure_file("compute_position.comp" "compute_position.comp" COPYONLY)
 configure_file("correct_velocity.comp" "correct_velocity.comp" COPYONLY)
