--- a/src/glutils/CMakeLists.txt
+++ b/src/glutils/CMakeLists.txt
@@ -3,3 +3,9 @@ add_library(shader_program "shader_program.cpp" "shader_program.h")
 add_library(ssbo "ssbo.cpp" "ssbo.h")
 
 add_library(vao "vao.cpp" "vao.h")
+
+add_library(texture "texture.cpp" "texture.h")
+
+add_library(fbo "fbo.cpp" "fbo.h")
+
+add_library(cubemap "cubemap.cpp" "cubemap.h")
