--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.20)
 project(
     fluid-simulation
-    VERSION 0.1.0
+    VERSION 1.0.0
     LANGUAGES C CXX
     )
 set(CMAKE_CXX_STANDARD 20 CACHE STRING "The C++ standard to use")
@@ -14,6 +14,7 @@ add_subdirectory("external")
 add_subdirectory("src")
 
 add_subdirectory("shaders")
+add_subdirectory("assets")
 
 add_executable(main app/main.cpp)
 target_link_libraries(
