--- a/src/misc/CMakeLists.txt
+++ b/src/misc/CMakeLists.txt
@@ -3,3 +3,5 @@ add_library(grid INTERFACE)
 add_library(bounding_box "bounding_box.cpp" "bounding_box.h")
 
 add_library(helper "helper.cpp" "helper.h")
+
+add_library(image "image.cpp" "image.h")
